--- a/PpmViewer/PpmViewer.vcxproj
+++ b/PpmViewer/PpmViewer.vcxproj
@@ -281,6 +281,8 @@
     <ClInclude Include="FL\platform.H" />
     <ClInclude Include="FL\win32.H" />
     <ClInclude Include="FL\x.H" />
+    <ClInclude Include="NegateBlueEffect.hpp" />
+    <ClInclude Include="NegateGreenEffect.hpp" />
     <ClInclude Include="NegateRedEffect.hpp" />
     <ClInclude Include="RemoveBlueEffect.hpp" />
     <ClInclude Include="RemoveGreenEffect.hpp" />
