--- a/PpmViewer/PpmViewer.vcxproj.filters
+++ b/PpmViewer/PpmViewer.vcxproj.filters
@@ -503,6 +503,12 @@
     <ClInclude Include="NegateBlueEffect.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GrayscaleEffect.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AddNoiseEffect.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="bunny.ppm">
