--- a/PpmViewer/PpmViewer.vcxproj
+++ b/PpmViewer/PpmViewer.vcxproj
@@ -136,6 +136,8 @@
     <ClInclude Include="EffectFactory.hpp" />
     <ClInclude Include="FileBrowser.hpp" />
     <ClInclude Include="FileHelpers.hpp" />
+    <ClInclude Include="FlipHorizontallyEffect.hpp" />
+    <ClInclude Include="FlipVerticallyEffect.hpp" />
     <ClInclude Include="FltkIncludes.h" />
     <ClInclude Include="FL\abi-version.h" />
     <ClInclude Include="FL\dirent.h" />
@@ -283,6 +285,7 @@
     <ClInclude Include="FL\win32.H" />
     <ClInclude Include="FL\x.H" />
     <ClInclude Include="GrayscaleEffect.hpp" />
+    <ClInclude Include="HighContrastEffect.hpp" />
     <ClInclude Include="NegateBlueEffect.hpp" />
     <ClInclude Include="NegateGreenEffect.hpp" />
     <ClInclude Include="NegateRedEffect.hpp" />
